<resources>
    <string name="app_name">SmartHeart</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="please_update_the_input">Please update the input</string>
    <string name="btn_back_to_main_menu">Main</string>
    <string name="Next">Next</string>
    <string name="textview_basic_input">Basic Input</string>

    <string name="str_turn_back">取消</string>
    <string name="str_forward">前进</string>
    <string name="start_cpr">Start CPR</string>
    <string name="update_input">Update Input</string>
    <string name="settings">Settings</string>
    <string name="useful_links">Useful Links</string>
    <string name="children_health_info">Children Health Info</string>
    <string name="main_menu">Main</string>
    <string name="monthly_input">Monthly Input</string>
    <string name="height_cm">Height(cm):</string>
    <string name="weight_kg">Weight(kg):</string>
    <string name="chest_circumference_cm">Chest Circumference(cm):</string>
    <string name="length_of_sternum_cm">Length of Sternum(cm):</string>
    <string name="save">Save</string>
    <string name="maybe_later">Maybe later</string>
    <string name="input_now">Input now</string>
    <string name="call_911">Call 911</string>
    <string name="push_harder">Push Harder!</string>
    <string name="push_faster">Push Faster!</string>
    <string name="release_fully">Release Fully!</string>
    <string name="photo_of_front_chest">Photo of front chest: </string>
    <string name="edit">Edit</string>
    <string name="photo_of_side_chest" >Photo of side chest : </string>
    <string name="scale_animation">Scale Animation</string>
    <string name="save_monthinput">Save</string>
    <string name="set_birthday">Set birthday</string>
    <string name="please_enter_name">Please enter name!</string>
    <string name="please_choose_gender">Please choose gender!</string>
    <string name="please_set_birthday">Please set birthday!</string>
    <string name="saved_successfully">Saved successful</string>
    <string name="unsupported_language">Unsupported language!</string>
    <string name="speak_push_harder">Push harder</string>
    <string name="device_is_moving">Device is moving...</string>
    <string name="not_moving">Not moving...</string>
    <string name="acceleration_m2_s2">Acceleration(m^2/s)\n</string>
    <string name="velocity_maohao">Velocity:</string>
    <string name="proximity_maohao">"Proximity: "</string>
    <string name="magnetic_gangn">Magnetic\n</string>
    <string name="orientation_degree_gangn">Orientation(degree)\n</string>
    <string name="please_set_the_correct_height">Please set the correct height!</string>
    <string name="please_set_the_correct_weight">Please set the correct weight!</string>
    <string name="please_set_the_correct_chest_circumference">Please set the correct chest circumference!</string>
    <string name="please_set_the_correct_length">Please set the correct length!</string>
    <string name="input_out_of_date">Input out of date!</string>
    <string name="please_update_the_monthly_input">Please update the monthly input!</string>
    <string name="upload_successfully">Upload successfully</string>
    <string name="camera">Camera</string>
    <string name="photo_library">Photo Library</string>
    <string name="cancel">Cancel</string>
    <string name="start_CPR">Start CPR</string>
    <string name="update_input_major">Update Input</string>
    <string name="name_maohao">Name:</string>
    <string name="gender_maohao">Gender:</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="birthday_maohao">Birthday:</string>
    <string name="emergency_call">Emergency Call:</string>
    <string name="for_emergency">For emergency</string>
    <string name="name_maohao_1">Name:</string>
    <string name="age_maohao">Age:</string>
    <string name="rate_maohao">Rate:</string>
    <string name="depth_maohao">Depth:</string>
    <string name="elapsed_time">Elapsed Time:</string>
    <string name="perform_CPR_with_the_hand_wearing_the_watch">Perform CPR with the hand wearing the watch!</string>
    <string name="please_enter_an_integer">Please enter an integer</string>
    <string name="last_update">Last Update:</string>
    <string name="perform_cpr">Perform CPR</string>
    <string name="system_settings">System Settings</string>
    <string name="CPR_options">CPR Options</string>
    <string name="some_other_stuff">Some Other Stuff</string>
    <string name="nick_name_is_also_ok">Nickname is also OK</string>
</resources>