<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnMonthtoMain"
            android:text="@string/main_menu"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/monthly_input"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/height_cm"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/et_height"
            android:numeric="integer"
            android:inputType="number"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/weight_kg"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/et_weight"
            android:numeric="integer"
            android:inputType="number"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/chest_circumference_cm"/>
        <EditText
            android:layout_width="0dp"
            android:numeric="integer"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:id="@+id/et_chestcircumference"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/length_of_sternum_cm"/>
        <EditText
            android:layout_width="0dp"
            android:numeric="integer"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:id="@+id/et_sternum"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btnMonthSave"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
